--- a/contribute.html
+++ b/contribute.html
@@ -17,12 +17,25 @@
             --card-shadow: rgba(0,0,0,0.1);
         }
 
+        .dark-mode {
+            --primary-color: #8ab4f8;
+            --accent-color: #fdd663;
+            --green-accent: #81c995;
+            --red-accent: #f28b82;
+            --text-color: #e0e0e0;
+            --bg-color: #202124;
+            --card-bg: #303134;
+            --card-border: #5f6368;
+            --card-shadow: rgba(0,0,0,0.3);
+        }
+
         body {
             font-family: 'Google Sans', Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: var(--bg-color);
             color: var(--text-color);
+            transition: all 0.3s ease;
         }
 
         .container {
@@ -326,10 +339,146 @@
             margin: 10px 0;
             line-height: 1.5;
         }
+
+        .main-navbar {
+            background: #E8F0FE;
+            border-bottom: 2px solid #4285F4;
+            padding: 0;
+            margin-bottom: 0;
+            transition: all 0.3s ease;
+        }
+        .dark-mode .main-navbar {
+            background: #303134;
+            border-bottom: 2px solid #8ab4f8;
+        }
+        .nav-container {
+            max-width: 1200px;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 20px;
+            height: 60px;
+        }
+        .nav-logo {
+            font-weight: bold;
+            color: #4285F4;
+            font-size: 1.3rem;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        .dark-mode .nav-logo {
+            color: #8ab4f8;
+        }
+        .nav-links a {
+            color: #333;
+            text-decoration: none;
+            margin-left: 25px;
+            font-weight: 500;
+            transition: color 0.2s;
+        }
+        .dark-mode .nav-links a {
+            color: #e0e0e0;
+        }
+        .nav-links a:hover {
+            color: #4285F4;
+        }
+        .dark-mode .nav-links a:hover {
+            color: #8ab4f8;
+        }
+        @media (max-width: 700px) {
+            .nav-container {
+                flex-direction: column;
+                align-items: flex-start;
+                height: auto;
+                padding: 10px 10px;
+            }
+            .nav-links {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+            }
+            .nav-links a {
+                margin: 10px 0 0 0;
+            }
+        }
+        body > .container:first-of-type {
+            margin-top: 0 !important;
+        }
+        .toggle-container {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .toggle-switch {
+            position: relative;
+            display: inline-block;
+            width: 60px;
+            height: 34px;
+        }
+        .toggle-switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #ccc;
+            transition: .4s;
+            border-radius: 34px;
+        }
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            transition: .4s;
+            border-radius: 50%;
+        }
+        input:checked + .slider {
+            background-color: var(--primary-color);
+        }
+        input:checked + .slider:before {
+            transform: translateX(26px);
+        }
+        .toggle-label {
+            margin-right: 10px;
+            line-height: 34px;
+            color: var(--text-color);
+        }
     </style>
 </head>
 <body>
+    <nav class="main-navbar">
+        <div class="nav-container">
+            <a href="index.html" class="nav-logo">Noah's Kindness Hub</a>
+            <div class="nav-links">
+                <a href="about-noah.html">About Noah</a>
+                <a href="kindness-gallery.html">Kindness Gallery</a>
+                <a href="acts-of-kindness.html">Acts of Kindness</a>
+                <a href="inspiration-stories.html">Inspiration Stories</a>
+                <a href="contribute.html">Contribute</a>
+                <a href="credits-grid.html">Credits & Thanks</a>
+            </div>
+        </div>
+    </nav>
     <div class="container">
+        <div class="toggle-container">
+            <span class="toggle-label">Dark Mode</span>
+            <label class="toggle-switch">
+                <input type="checkbox" id="darkModeToggle">
+                <span class="slider"></span>
+            </label>
+        </div>
         <header>
             <h1>Contribute</h1>
             <p class="subtitle">Join us in continuing Noah's legacy of kindness. There are many ways to contribute to our community project, whether you want to share your own acts of kindness, submit media, or help spread the word.</p>
@@ -532,5 +681,17 @@
             <p>By submitting content, you grant permission for it to be displayed on Noah's Kindness Hub and potentially used in school-related kindness initiatives.</p>
         </div>
     </div>
+    <script>
+    // Dark mode toggle functionality
+    const darkModeToggle = document.getElementById('darkModeToggle');
+    // Check for saved preference
+    const savedDarkMode = localStorage.getItem('darkMode') === 'true';
+    darkModeToggle.checked = savedDarkMode;
+    document.body.classList.toggle('dark-mode', savedDarkMode);
+    darkModeToggle.addEventListener('change', function() {
+        document.body.classList.toggle('dark-mode', this.checked);
+        localStorage.setItem('darkMode', this.checked);
+    });
+    </script>
 </body>
 </html>
