--- a/kindness-gallery.html
+++ b/kindness-gallery.html
@@ -416,18 +416,25 @@
             color: var(--text-color);
         }
     </style>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="main-navbar">
-        <div class="nav-container">
-            <a href="index.html" class="nav-logo">Noah's Kindness Hub</a>
-            <div class="nav-links">
-                <a href="about-noah.html">About Noah</a>
-                <a href="kindness-gallery.html">Kindness Gallery</a>
-                <a href="acts-of-kindness.html">Acts of Kindness</a>
-                <a href="inspiration-stories.html">Inspiration Stories</a>
-                <a href="contribute.html">Contribute</a>
-                <a href="credits-grid.html">Credits & Thanks</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light main-navbar">
+        <div class="container">
+            <a class="navbar-brand nav-logo" href="index.html">Noah's Kindness Hub</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainNavbar">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-links">
+                    <li class="nav-item"><a class="nav-link" href="about-noah.html">About Noah</a></li>
+                    <li class="nav-item"><a class="nav-link" href="kindness-gallery.html">Kindness Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="acts-of-kindness.html">Acts of Kindness</a></li>
+                    <li class="nav-item"><a class="nav-link" href="inspiration-stories.html">Inspiration Stories</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contribute.html">Contribute</a></li>
+                    <li class="nav-item"><a class="nav-link" href="credits-grid.html">Credits & Thanks</a></li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -547,5 +554,7 @@
         localStorage.setItem('darkMode', this.checked);
     });
     </script>
+    <!-- Bootstrap JS Bundle (with Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
