changes to kindness gallery

--- a/credits-grid.html
+++ b/credits-grid.html
@@ -63,6 +63,7 @@
                     <li>All Teachers at Our School</li>
                     <li>School Administration</li>
                     <li>Support Staff</li>
+                    <li>America SCORES Bay Area</li>
                 </ul>
             </div>
 
