changes to kindness gallery

--- a/kindness-gallery.html
+++ b/kindness-gallery.html
@@ -50,17 +50,13 @@
     <div class="container bottom-spacing">
         <header>
             <h1>Kindness Gallery</h1>
-            <p class="subtitle">A collection of artwork and photos from our community celebrating Noah's legacy of kindness.</p>
+            <p class="subtitle">A heartfelt collection of artwork and photos created by Bradley Elementary students, celebrating Noah’s legacy of kindness and the spirit of our community.</p>
         </header>
 
-        <div class="gallery-filters">
-            <button class="filter-button active" data-filter="student-art" onclick="scrollToSection('student-art-section')">Student Artwork</button>
-            <button class="filter-button" data-filter="photos" onclick="scrollToSection('photos-section')">Photos</button>
-        </div>
+        <h2 class="carousel-title-centered">Student Artwork</h2>
 
         <!-- Student Artwork Carousel -->
         <div id="student-art-section" class="carousel-section">
-            <h2>Student Artwork</h2>
             <div id="artworkCarousel" class="carousel slide" data-bs-ride="carousel">
                 <!-- Carousel Indicators -->
                 <div class="carousel-indicators">
@@ -392,16 +388,16 @@
                         <div class="gallery-slide">
                             <div class="gallery-image">
                                 <img src="images/gallery/noah-39.jpeg" alt="Student Artwork 40">
+                            </div>
                         </div>
                     </div>
-                </div>
                     <div class="carousel-item">
                         <div class="gallery-slide">
                             <div class="gallery-image">
                                 <img src="images/gallery/noah-40.jpeg" alt="Student Artwork 41">
-            </div>
-        </div>
-                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="carousel-item">
                         <div class="gallery-slide">
                             <div class="gallery-image">
@@ -458,7 +454,7 @@
         </div>
 
         <div class="gallery-note">
-            <p>Want to share your artwork or photos? <a href="https://padlet.com/sanchez27gs/kindness-inspiration-board-2ngltiohmz997jct" target="_blank" rel="noopener">Submit your work</a> to our gallery! All student artwork and photos are welcome.</p>
+            <p>Want to share your artwork or photos? <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxSq_dghzPcbcAgfuFAh5Vkf4jx8_AOBV-7L8hOgU7gYZ1jg/viewform?usp=header" target="_blank" rel="noopener">Submit your work</a> to our gallery! All student artwork and photos are welcome.</p>
         </div>
 
         <div class="gallery-guidelines" style="margin-bottom: 60px;">
