changes to whole site

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container bottom-spacing">
         <header>
             <h1>Noah's Kindness Hub</h1>
-            <p class="subtitle">Spreading kindness and compassion in memory of Noah</p>
+            <p class="subtitle">Join us in honoring Noah’s legacy by spreading kindness, sharing your stories, and inspiring compassion in our community.</p>
         </header>
 
         <div class="features-grid">
