changes to whole site

--- a/credits-grid.html
+++ b/credits-grid.html
@@ -81,12 +81,10 @@
             <!-- Participating Students -->
             <div class="credit-card">
                 <div class="credit-icon">👥</div>
-                <h2>All Students</h2>
-                <p>To every student who has participated in acts of kindness, shared their stories, and contributed to making our school a more caring and compassionate place.</p>
-                <ul class="credit-list">
-                    <li>Students from All Grades</li>
-                    <li>All Student Contributors</li>
-                </ul>
+                <h2>Bradley Elementary Students</h2>
+                <p>
+                    Thank you to all students from Bradley Elementary for your enthusiasm, creativity, and kindness in participating in acts of kindness and helping make our school a more caring and compassionate place.
+                </p>
             </div>
 
             <!-- Project Coordinators -->
@@ -102,7 +100,11 @@
         </div>
 
         <div class="thank-you-note">
-            <p>Thank you to everyone who has contributed to Noah's Kindness Hub. Your support and participation have helped create a lasting legacy of kindness in our community.</p>
+            <p>
+                Thank you to everyone who has contributed to Noah's Kindness Hub. Your support and participation have helped create a lasting legacy of kindness in our community.
+                <br><br>
+                <strong>A heartfelt thank you to all the students of Bradley Elementary for being shining examples of kindness!</strong>
+            </p>
         </div>
     </div>
 
