--- a/acts-of-kindness.html
+++ b/acts-of-kindness.html
@@ -50,50 +50,62 @@
     <div class="container">
         <header>
             <h1>Acts of Kindness</h1>
-            <p class="subtitle">Discover ways to spread kindness and make a positive impact in your community</p>
+            <p class="subtitle">Discover ways to spread kindness and make a positive impact in the world</p>
         </header>
 
         <div class="acts-grid">
             <div class="act-card">
                 <div class="act-icon">🎨</div>
                 <h2>Create Kindness Art</h2>
-                <p>Make artwork that spreads joy and positivity. Share your creations with others or display them in your community.</p>
-                <a href="contribute.html" class="act-link">Share Your Art</a>
+                <p>
+                    One message at just the right moment can change someone's entire day, outlook, or life. Join The Kindness Rocks Project and help spread kindness through art and uplifting messages.
+                </p>
+                <a href="https://www.thekindnessrocksproject.com/" class="act-link" target="_blank" rel="noopener">Get Involved</a>
             </div>
 
             <div class="act-card">
                 <div class="act-icon">📝</div>
                 <h2>Write Kind Notes</h2>
-                <p>Leave encouraging notes for classmates, teachers, or family members. Small words of kindness can make a big difference.</p>
-                <a href="contribute.html" class="act-link">Share Your Notes</a>
+                <p>
+                    The World Needs More Love Letters is a global organization combining the power of social media with the art of letter writing to handwrite + mail love letters to people in need around the world.
+                </p>
+                <a href="https://www.moreloveletters.com/" class="act-link" target="_blank" rel="noopener">Get Involved</a>
             </div>
 
             <div class="act-card">
                 <div class="act-icon">🤝</div>
                 <h2>Help Others</h2>
-                <p>Offer assistance to someone in need. Whether it's helping with homework or carrying groceries, every act counts.</p>
-                <a href="contribute.html" class="act-link">Share Your Story</a>
+                <p>
+                    The Make-A-Wish Foundation grants life-changing wishes to children with critical illnesses, bringing hope, strength, and joy to their lives and families.
+                </p>
+                <a href="https://wish.org/" class="act-link" target="_blank" rel="noopener">Get Involved</a>
             </div>
 
             <div class="act-card">
                 <div class="act-icon">🌱</div>
                 <h2>Community Garden</h2>
-                <p>Participate in our community garden project. Help grow plants and share the harvest with others.</p>
-                <a href="contribute.html" class="act-link">Get Involved</a>
+                <p>
+                    KidsGardening helps children play, learn, and grow through gardening. They support educators and caregivers by providing grant funding, original educational resources, inspiration, and a community to bring the life-changing benefits of gardening to kids and families.
+                </p>
+                <a href="https://kidsgardening.org/" class="act-link" target="_blank" rel="noopener">Get Involved</a>
             </div>
 
             <div class="act-card">
                 <div class="act-icon">🎁</div>
                 <h2>Gift Giving</h2>
-                <p>Create small gifts or care packages for those who might need a little extra kindness in their day.</p>
-                <a href="contribute.html" class="act-link">Share Your Gifts</a>
+                <p>
+                    Operation Gratitude sends care packages and heartfelt letters to deployed troops, veterans, first responders, and military families, showing appreciation and support for those who serve.
+                </p>
+                <a href="https://www.operationgratitude.com/" class="act-link" target="_blank" rel="noopener">Get Involved</a>
             </div>
 
             <div class="act-card">
                 <div class="act-icon">🎵</div>
                 <h2>Music & Joy</h2>
-                <p>Share the gift of music by performing for others or creating playlists that bring happiness.</p>
-                <a href="contribute.html" class="act-link">Share Your Music</a>
+                <p>
+                    Musicians On Call (MOC) brings live and recorded music to the bedsides of patients, families, and caregivers in healthcare environments, delivering the healing power of music when it's needed most.
+                </p>
+                <a href="https://www.musiciansoncall.org/" class="act-link" target="_blank" rel="noopener">Get Involved</a>
             </div>
         </div>
 
