changes on contribute page

--- a/credits-grid.html
+++ b/credits-grid.html
@@ -58,12 +58,16 @@
             <div class="credit-card">
                 <div class="credit-icon">👨‍🏫</div>
                 <h2>Teachers and Staff</h2>
-                <p>Our dedicated educators and staff members who have supported and encouraged students to participate in acts of kindness and contribute to Noah's legacy.</p>
+                <p>
+                    We are deeply grateful to all the educators, staff, and administrators who have inspired and encouraged students to participate in acts of kindness and help carry on Noah's legacy.
+                    <br><br>
+                    <strong>Special thanks to Mayra Serriteno, Cassandra Preciado, Hamza Al Haidari, Consuelo Gomez, and Addy Rodriguez for their outstanding support and commitment along the way.</strong>
+                </p>
                 <ul class="credit-list">
                     <li>All Teachers at Our School</li>
                     <li>School Administration</li>
                     <li>Support Staff</li>
-                    <li>America SCORES Bay Area</li>
+                    <li>America SCORES Bay Area (community partner)</li>
                 </ul>
             </div>
 
