changes on inspiration stories

--- a/inspiration-stories.html
+++ b/inspiration-stories.html
@@ -50,7 +50,7 @@
     <div class="container bottom-spacing">
         <header>
             <h1>Inspiration Stories</h1>
-            <p class="subtitle">Real stories of kindness and compassion from our community</p>
+            <p class="subtitle">Inspiring headlines of kindness and compassion from communities worldwide</p>
         </header>
 
         <div class="stories-grid">
