changes on credits.html

--- a/credits-grid.html
+++ b/credits-grid.html
@@ -97,8 +97,8 @@
                 <h2>Project Coordinators</h2>
                 <p>Special thanks to our dedicated coordinators who have worked tirelessly to bring Noah's Kindness Hub to life.</p>
                 <ul class="credit-list">
-                    <li>Mr. Gabriel</li>
-                    <li>Ms. Dexi</li>
+                    <li>Mr. Gabriel Sanchez</li>
+                    <li>Ms. Dexiree Sanchez</li>
                 </ul>
             </div>
         </div>
