changes on index.html

--- a/index.html
+++ b/index.html
@@ -51,24 +51,28 @@
     <div class="container bottom-spacing">
         <header>
             <h1>Noah's Kindness Hub</h1>
-            <p class="subtitle">Join us in honoring Noah’s legacy by spreading kindness, sharing your stories, and inspiring compassion in our community.</p>
+            <p class="subtitle">Join us in honoring Noah's legacy by spreading kindness, sharing your stories, and inspiring compassion in our community.</p>
         </header>
 
         <div class="features-grid">
+            <div class="feature-card">
+                <div class="feature-icon">👦</div>
+                <h2>About Noah</h2>
+                <p>Learn about Noah's story, his legacy, and the inspiration behind this kindness hub.</p>
+                <a href="about-noah.html" class="feature-link">Read About Noah</a>
+            </div>
             <div class="feature-card">
                 <div class="feature-icon">🎨</div>
                 <h2>Kindness Gallery</h2>
                 <p>Explore artwork, photos, and creative expressions of kindness shared by our community.</p>
                 <a href="kindness-gallery.html" class="feature-link">View Gallery</a>
             </div>
-
             <div class="feature-card">
                 <div class="feature-icon">💫</div>
                 <h2>Acts of Kindness</h2>
                 <p>Discover ways to spread kindness and make a positive impact in your community.</p>
                 <a href="acts-of-kindness.html" class="feature-link">Get Inspired</a>
             </div>
-
             <div class="feature-card">
                 <div class="feature-icon">📝</div>
                 <h2>Inspiration Stories</h2>
