Changes to images

--- a/about-noah.html
+++ b/about-noah.html
@@ -61,7 +61,7 @@
                     <p>Through this hub, we hope to inspire others to follow in Noah's footsteps by spreading kindness and compassion in their own lives. Each act of kindness shared here helps keep his memory alive and creates a lasting legacy of love and generosity.</p>
                 </div>
                 <div class="tribute-image">
-                    <img src="images/noah-4.jpeg" alt="Noah" class="memorial-image">
+                    <img src="images/noah-4-1.jpeg" alt="Noah" class="memorial-image">
                 </div>
             </div>
         </div>
