Changes to images

--- a/kindness-gallery.html
+++ b/kindness-gallery.html
@@ -107,11 +107,73 @@
                     <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="44"></button>
                     <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="45"></button>
                     <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="46"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="47"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="48"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="49"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="50"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="51"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="52"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="53"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="54"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="55"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="56"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="57"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="58"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="59"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="60"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="61"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="62"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="63"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="64"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="65"></button>
+                    <button type="button" data-bs-target="#artworkCarousel" data-bs-slide-to="66"></button>
                 </div>
 
                 <!-- Carousel Items -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-24.jpeg" alt="Student Artwork 24">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-25.jpeg" alt="Student Artwork 25">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-26.jpeg" alt="Student Artwork 26">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-27.jpeg" alt="Student Artwork 27">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-38.jpeg" alt="Student Artwork 38">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-41.jpeg" alt="Student Artwork 41">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
                         <div class="gallery-slide">
                             <div class="gallery-image">
                                 <img src="images/gallery/noah-1.jpeg" alt="Student Artwork 1">
@@ -275,34 +337,6 @@
                     <div class="carousel-item">
                         <div class="gallery-slide">
                             <div class="gallery-image">
-                                <img src="images/gallery/noah-24.jpeg" alt="Student Artwork 24">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="gallery-slide">
-                            <div class="gallery-image">
-                                <img src="images/gallery/noah-25.jpeg" alt="Student Artwork 25">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="gallery-slide">
-                            <div class="gallery-image">
-                                <img src="images/gallery/noah-26.jpeg" alt="Student Artwork 26">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="gallery-slide">
-                            <div class="gallery-image">
-                                <img src="images/gallery/noah-27.jpeg" alt="Student Artwork 27">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="gallery-slide">
-                            <div class="gallery-image">
                                 <img src="images/gallery/noah-28.jpeg" alt="Student Artwork 28">
                             </div>
                         </div>
@@ -373,13 +407,6 @@
                     <div class="carousel-item">
                         <div class="gallery-slide">
                             <div class="gallery-image">
-                                <img src="images/gallery/noah-38.jpeg" alt="Student Artwork 38">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="gallery-slide">
-                            <div class="gallery-image">
                                 <img src="images/gallery/noah-39.jpeg" alt="Student Artwork 39">
                             </div>
                         </div>
@@ -388,13 +415,6 @@
                         <div class="gallery-slide">
                             <div class="gallery-image">
                                 <img src="images/gallery/noah-40.jpeg" alt="Student Artwork 40">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="gallery-slide">
-                            <div class="gallery-image">
-                                <img src="images/gallery/noah-41.jpeg" alt="Student Artwork 41">
                             </div>
                         </div>
                     </div>
@@ -415,13 +435,6 @@
                     <div class="carousel-item">
                         <div class="gallery-slide">
                             <div class="gallery-image">
-                                <img src="images/gallery/noah-44.jpeg" alt="Student Artwork 44">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="gallery-slide">
-                            <div class="gallery-image">
                                 <img src="images/gallery/noah-45.jpeg" alt="Student Artwork 45">
                             </div>
                         </div>
@@ -433,6 +446,158 @@
                             </div>
                         </div>
                     </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-44.jpeg" alt="Student Artwork 44">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-47.jpeg" alt="Student Artwork 47">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-48.jpeg" alt="Student Artwork 48">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-49.jpeg" alt="Student Artwork 49">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-50.jpeg" alt="Student Artwork 50">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-51.jpeg" alt="Student Artwork 51">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-52.jpeg" alt="Student Artwork 52">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-53.jpeg" alt="Student Artwork 53">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-54.jpeg" alt="Student Artwork 54">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-55.jpeg" alt="Student Artwork 55">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-56.jpeg" alt="Student Artwork 56">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-57.jpeg" alt="Student Artwork 57">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-58.jpeg" alt="Student Artwork 58">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-59.jpeg" alt="Student Artwork 59">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-60.jpeg" alt="Student Artwork 60">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-61.jpeg" alt="Student Artwork 61">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-62.jpeg" alt="Student Artwork 62">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-63.jpeg" alt="Student Artwork 63">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-64.jpeg" alt="Student Artwork 64">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-65.jpeg" alt="Student Artwork 65">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="gallery-slide">
+                            <div class="gallery-image">
+                                <img src="images/gallery/noah-66.jpeg" alt="Student Artwork 66">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Counter below carousel -->
+                <div class="carousel-counter text-center mt-2">
+                    <span id="currentSlide">1</span> / <span id="totalSlides">66</span>
                 </div>
 
                 <button class="carousel-control-prev" type="button" data-bs-target="#artworkCarousel" data-bs-slide="prev">
@@ -481,6 +646,19 @@
             });
             event.target.classList.add('active');
         }
+
+        // Add this new code for the carousel counter
+        document.addEventListener('DOMContentLoaded', function() {
+            const carousel = document.getElementById('artworkCarousel');
+            const totalSlides = document.querySelectorAll('.carousel-item').length;
+            const currentSlideSpan = document.getElementById('currentSlide');
+            const totalSlidesSpan = document.getElementById('totalSlides');
+            totalSlidesSpan.textContent = totalSlides;
+
+            carousel.addEventListener('slid.bs.carousel', function (event) {
+                currentSlideSpan.textContent = event.to + 1;
+            });
+        });
     </script>
 </body>
 </html>
